# spice-tester

./: GUIDE.md  README-src.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-code-references.yml  build-pages-from-toml.yml  generate-main-pages.yml  generate-readme.yml  generate_main_pages.yml
docs/: code_references.md  index.md  quick_start.md  quick_start_guide.md
src/autora/experimentalist/pooler/example_pooler/: __init__.py
src/autora/experimentalist/sampler/example_sampler/: __init__.py
src/autora/test/: test.py
src/autora/theorist/example_theorist/: __init__.py
tests/: test_experimenatlist_pooler_example.py  test_experimentalist_sampler_exmple.py
