[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-theorist-template"
description = "AutoRA Theorist Template"
authors = [{ name = "Max Mustermann", email = "max@mustermann.de" }]
dynamic = ["version"]

readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-theorist-template"
documentation = "https://autoresearch.github.io/autora/"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
